--- a/easytouch_theme/public/scss/easy_border.scss
+++ b/easytouch_theme/public/scss/easy_border.scss
@@ -1,7 +1,7 @@
 [data-theme="easytouch"] {
   
      .standard-sidebar-label {
-        color: #0333b6;
+      //   color: #0333b6;
         
     }
    .sidebar-item-label{
